@@ -1,0 +1,7 @@
+project(statistics)
+
+set(PLUGIN_NAME "statistics")
+set(PLUGIN_DISPLAY_NAME "Statistics")
+
+include("statistics.cmake")
+include("${CMAKE_SOURCE_DIR}/src/plugins/plugins.cmake")
