@@ -16,6 +16,7 @@ set(HEADERS "action.h"
             "imagemanager.h"
             "advanceditem.h"
             "advanceditemmodel.h"
-            "advanceditemdelegate.h")
+            "advanceditemdelegate.h"
+            "filecookiejar.h")
 
 qt4_wrap_cpp(MOC_SOURCES ${HEADERS})
